--- a/style.css
+++ b/style.css
@@ -7,7 +7,14 @@
   height:250px;
 }
 #output textarea {
-  width:100%;
+  width:99%;
   height:350px;
 }
-
+header {
+  border-bottom:none;
+  border-top:1px dashed #B5E853;
+  margin:0;
+}
+body {
+  margin-top:5px;
+}
